--- a/Woche 3/Marketing/assets/css/style.css
+++ b/Woche 3/Marketing/assets/css/style.css
@@ -24,8 +24,8 @@
 }
 
 img {
-    width: 100%;
-    height: auto;
+    max-width: 100%;
+    
 }
 html {
 	/* Standard-Schrift definieren */
@@ -39,6 +39,11 @@ h2 {
 	margin: 0;
 }
 
+h1 {
+    font-size: 3rem;
+    line-height: 1.1;
+    margin-bottom: 2rem;
+}
 h2 {
     font-size: 30px;
     line-height: 1.1;
@@ -48,6 +53,40 @@ h2 {
 p {
     margin: 0 0 0.75rem;
         
+}
+
+header {
+    background-image: url(../images/background.jpg);
+    min-height: 800px;
+    background-repeat: no-repeat;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.teaser {
+
+    
+    max-width: 1000px;
+    
+    text-shadow: 0 1px 5px rgba(0,0,0,0.5);
+    color: #fff;
+    padding: 20px;
+    
+
+    
+    
+    
+    
+
+}
+
+.teaser p {
+    
+    font-size: 25px;
+    font-weight: 500;
+    
 }
 
 .mission {
@@ -81,11 +120,16 @@ p {
     padding: 80px 20px;
     max-width: 1000px;
     margin: 0 auto;
+    
 }
 
 .function {
     width: 100%;
     display: flex;
+    align-items: center;
+    
+    
+    
 }
 
 .text {
@@ -112,15 +156,26 @@ section h2 {
     display: flex;
     flex-wrap: wrap;
     margin: 0 auto;
-
+    justify-content: center;
 }
 
+
+
 .press img {
-    height: 20px;
+    height: 1rem;
     width: auto;
 }
 .press article {
     box-sizing: border-box;
     width: 33.3333333%;
-    padding: 40px 20px;
+    padding: 2rem 1rem;
+    
 }
+
+/* section {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: stretch;
+} */
